# GPaint

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
data/: icons.qrc
src/: CMakeLists.txt  GP_ActionFactory.cpp  GP_ActionFactory.h  GP_ActionGroupManager.cpp  GP_ActionGroupManager.h  GP_ActionHandler.cpp  GP_ActionHandler.h  GP_Application.cpp  GP_Application.h  GP_ApplicationWindow.cpp  GP_ApplicationWindow.h  GP_CentralWidget.cpp  GP_CentralWidget.h  GP_Document.cpp  GP_Document.h  GP_TabWidget.cpp  GP_TabWidget.h  GP_TabWindow.cpp  GP_TabWindow.h  GP_WidgetFactory.cpp  GP_WidgetFactory.h  GP_global.cpp  GP_global.h  main.cpp
test/: CMakeLists.txt
